fix: style: pokemon card object fit contain

--- a/src/components/PokemonCard/style.module.scss
+++ b/src/components/PokemonCard/style.module.scss
@@ -24,6 +24,7 @@
     img {
       width: 90%;
       height: 140px;
+      object-fit: contain;
       align-self: center;
       padding: 0.5rem 1rem;
     }
