--- a/src/components/PokemonList/styles.module.scss
+++ b/src/components/PokemonList/styles.module.scss
@@ -11,6 +11,10 @@
     grid-template-columns: repeat(3, 1fr);
   }
 
+  @media (max-width: 800px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   @media (max-width: 400px) {
     grid-template-columns: repeat(1, 1fr);
   }
