--- a/src/components/PokemonDetail/styles.module.scss
+++ b/src/components/PokemonDetail/styles.module.scss
@@ -5,6 +5,29 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
+  .info {
+    max-width: 650px;
+    width: 95%;
+    background-color: white;
+    height: 65vh;
+    bottom: 0;
+    position: relative;
+    margin-bottom: 1rem;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    img {
+      position: absolute;
+      margin: 0 auto;
+      margin-top: -200px;
+      width: 275px;
+      height: 275px;
+      object-fit: contain;
+    }
+  }
 }
 
 .loading {
