--- a/src/common/Spinner/styles.module.scss
+++ b/src/common/Spinner/styles.module.scss
@@ -2,7 +2,7 @@
   width: 30px;
   height: 30px;
   border: 3px solid transparent;
-  border-bottom-color: white !important;
+  border-bottom-color: #000 !important;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
