--- a/src/components/PokemonDetail/components/Stats/styles.module.scss
+++ b/src/components/PokemonDetail/components/Stats/styles.module.scss
@@ -3,4 +3,22 @@
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+
+  .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+
+    svg {
+      width: 30px;
+      height: 30px;
+      object-fit: contain;
+    }
+
+    p {
+      color: #666666;
+      font-size: 14px;
+    }
+  }
 }
