--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.cdnfonts.com/css/pokemon-solid');
+
+
 .home {
   max-width: 100vw;
   min-height: 100vh;
-  background-color: #f8f8f8;
+  background-color: #f8f1f1;
 
   header {
     padding: 1rem 0;
@@ -21,14 +24,25 @@
     }
 
     span {
+      font-family: 'Pokemon Solid', sans-serif;
+      color: #333;
       font-size: 2em;
       line-height: 1em;
       font-weight: 700;
       color: #222122;
+      letter-spacing: .2em;
+      text-shadow: 2px 2px 5px #888;
+      transition: all 300ms;
+    }
+
+    span:hover {
+      opacity: .7;
+      text-shadow: 2px 2px 8px #fff;
     }
 
     svg {
       width: 2rem;
+      color: #333;
     }
   }
 }
